--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -21,5 +21,5 @@ gauge_specs_dir = specs
 # The default delimiter used read csv files.
 csv_delimiter = ,
 
-# The port for flash plugin
-flash_server_port = 8000
+## The port for flash plugin
+#flash_server_port = 8002
